--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <title>AdminPro</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-signin-client_id" content="1044234204302-trjv1uh339c76mlv3620rkl6a0jf7l05.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js"></script>
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Favicon icon -->
